<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pink_rice"
    tools:context="dating.app.fastdating.QuestionLPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"

                    android:text="@string/terms_and_conditions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/primary_dark" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">


                    <CheckBox
                        android:id="@+id/chbox_pravila_usloviya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="16dp"
                        android:text="@string/i_agree_to_the" />

                    <TextView
                        android:id="@+id/bla_term_conditions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_toRightOf="@id/chbox_pravila_usloviya"
                        android:text="@string/terms_and_conditions_of_use" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <include layout="@layout/content_questionaire_photo" />

        <Button
            android:id="@+id/blaur_btn_sign_in"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ok_button" />
    </LinearLayout>
</ScrollView>
